tests/files/type_checker_tests/should_fail/043.cmdr
//Should fail when divide setting incompatible types
x = 3;
x /= true;
